--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ local.settings.json
 *.user
 *.userosscache
 *.sln.docstates
+*.txt
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
